# cc_beacon

./: .gitignore  README.md  USAGE.md  kiss.c  main.c  main.h  radio.h  serial.c  serial.h
cc1101_daemon/: Makefile  cc1101_rx_process.sh  cc1101_tx_process.sh  kiss.c  main.c  main.h  radio.c  serial.c  serial.c~
cc1101_handler/: CMakeLists.txt
cc1101_handler/apps/: CMakeLists.txt  example.c  example_rx.c  example_tx.c
cc1101_handler/include/: cc_beacon_iface.h
cc1101_handler/lib/: libcc_beacon_iface.0.1.dylib  libcc_beacon_iface.1.dylib  libcc_beacon_iface.dylib  libcc_beacon_iface.so.0.1  libcc_beacon_iface.so.1
cc1101_handler/src/: CMakeLists.txt  cc_beacon_iface.c
